# BING-Objectness

./: .gitignore  CMakeLists.txt  Objectness.sln  Readme.md  Readme.txt
LibLinear/: CMakeLists.txt  LibLinear.vcxproj.filters  README.1.93.txt  linear.cpp  linear.h  train.c  tron.cpp  tron.h
Objectness/: CMakeLists.txt  CmFile.cpp  CmFile.h  CmShow.cpp  CmTimer.h  DataSetVOC.cpp  DataSetVOC.h  Experiments.docx  FilterTIG.cpp  FilterTIG.h  Main.cpp  Objectness.cpp  Objectness.h  Objectness.vcxproj  Objectness.vcxproj.filters  stdafx.cpp  stdafx.h
VOC2007/: readme.txt
VOC2007/ImageSets/Layout/: test.txt  train.txt  trainval.txt  val.txt
VOC2007/ImageSets/Main/: aeroplane_test.txt  aeroplane_train.txt  aeroplane_trainval.txt  aeroplane_val.txt  bicycle_test.txt  bicycle_train.txt  bicycle_trainval.txt  bicycle_val.txt  bird_test.txt  bird_train.txt  bird_trainval.txt  bird_val.txt  boat_test.txt  boat_train.txt  boat_trainval.txt  boat_val.txt  bottle_test.txt  bottle_train.txt  bottle_trainval.txt  bottle_val.txt  bus_test.txt  bus_train.txt  bus_trainval.txt  bus_val.txt  car_test.txt  car_train.txt  car_trainval.txt  car_val.txt  cat_test.txt  cat_train.txt  cat_trainval.txt  cat_val.txt  chair_test.txt  chair_train.txt  chair_trainval.txt  chair_val.txt  cow_test.txt  cow_train.txt  cow_trainval.txt  cow_val.txt  (+46 more)
VOC2007/ImageSets/Segmentation/: test.txt  train.txt  trainval.txt  val.txt
